--- a/cvcrunchweb/webappcv/templates/base.html
+++ b/cvcrunchweb/webappcv/templates/base.html
@@ -12,61 +12,59 @@
 <body>
     <header class="text-bg-dark fixed-top cv-crunch-header">
         <div class="container-fluid">
-          <div class="d-flex flex-wrap justify-content-between align-items-center">
-            <ul class="nav col-12 col-lg-auto  mb-2 mb-md-0 align-items-center">
-              <li><a href="#" class="nav-link d-flex align-items-center">
-                <img src="{{ url_for('static', filename='images/cv crunch2.png') }}" alt="Logo" style="height: 60px;"> <!-- Adjust the height as needed -->
-                  </a>
-              </li> 
-              <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-              <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-            </ul>
-            <div class="d-flex align-items-center">
-                <form class="col-10 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark text-bg-dark" id="form-search" placeholder="Search..." aria-label="Search">
-                </form>
-        
-                <div class="nav-buttons">
-                    {% if current_user.is_authenticated %}
+            <div class="d-flex flex-wrap justify-content-between align-items-center">
+                <ul class="nav col-12 col-lg-auto  mb-2 mb-md-0 align-items-center">
+                    <li><a href="#" class="nav-link d-flex align-items-center">
+                        <img src="{{ url_for('static', filename='images/cv crunch2.png') }}" alt="Logo" style="height: 60px;"> <!-- Adjust the height as needed -->
+                    </a></li> 
+                    <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+                </ul>
+                <div class="d-flex align-items-center">
+                    <form class="col-10 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                        <input type="search" class="form-control form-control-dark text-bg-dark" id="form-search" placeholder="Search..." aria-label="Search">
+                    </form>
+                    <div class="nav-buttons">
+                        {% if current_user.is_authenticated %}
+                            <div class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img src="{{ profile_image }}" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;">
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="{{ url_for('main.profile') }}">Profile</a></li>
+                                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">Logout</a></li>
+                                </ul>
+                            </div>
+                        {% else %}
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img src="{{ profile_image }}" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{{ url_for('main.profile') }}">Profile</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.login') }}">Log in</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.signup') }}">Sign up</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ url_for('main.logout') }}">Logout</a></li>
                             </ul>
                         </div>
-                    {% else %}
-                    <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{ profile_image }}" alt="Profile" class="rounded-circle" style="width: 40px; height: 40px;">
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('main.login') }}">Log in</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('main.signup') }}">Sign up</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                        </ul>
+                        {% endif %}
                     </div>
-                    {% endif %}
                 </div>
             </div>
-          </div>
         </div>
     </header>
-
+    <!-- Add a spacer to push the content below the fixed navbar -->
+    <div style="height: 70px;"></div>
     <div class="container-fluid p-0">
         {% block content %}{% endblock %}
     </div>
-   
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-    <script type= "text/javascript" src="{{ url_for('static', filename='bootstrap.js') }}"></script>
-    <script type= "text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/dropzone.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
