--- a/cvcrunchweb/webappcv/templates/profile.html
+++ b/cvcrunchweb/webappcv/templates/profile.html
@@ -1,32 +1,86 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/dropzone.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
-    <meta name="csrf-token" content="{{ csrf_token() }}">
+{% extends "base.html" %}
 
-    </head>
-<body>
-    <div id="profile-page" class="container-fluid" >
-        <!-- Step 1: Welcome Message -->
-        <div id="profile-form" class="container">
-            <form action="/profile/picture" class="dropzone" id="profile-photo-upload">
-                <div class="dz-message needsclick">
-                    <img id="profile-img" src="{{ profile_image }}" alt="Profile Image">
+{% block title %}Profile{% endblock %}
+
+{% block content %}
+<div class="profile-page container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+        <form action="/profile/picture" class="dropzone mb-4" id="profile-photo-upload">
+            <div class="dz-message needsclick">
+                <img id="profile-img" src="{{ profile_image }}" alt="Profile Image" class="img-thumbnail mx-auto d-block">
+            </div>
+        </form>
+        </div>
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="text-center">Profile</h3>
                 </div>
-            </form>
-            <p>Escolha sua Foto de Perfil</p>
+                <div class="card-body">
+                    
+                    <form method="POST" action="/profile/update">
+                        <div class="form-group">
+                            <label for="full_name">Full Name</label>
+                            <input type="text" class="form-control" id="full_name" name="full_name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="street_address">Street Address</label>
+                            <input type="text" class="form-control" id="street_address" name="street_address" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="zip_code">Zip Code</label>
+                            <input type="text" class="form-control" id="zip_code" name="zip_code" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input type="text" class="form-control" id="city" name="city" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="state">State</label>
+                            <input type="text" class="form-control" id="state" name="state" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="country">Country</label>
+                            <input type="text" class="form-control" id="country" name="country" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="linkedin">LinkedIn Profile</label>
+                            <input type="url" class="form-control" id="linkedin" name="linkedin">
+                        </div>
+                        <div class="form-group">
+                            <label for="instagram">Instagram</label>
+                            <input type="url" class="form-control" id="instagram" name="instagram">
+                        </div>
+                        <div class="form-group">
+                            <label for="facebook">Facebook</label>
+                            <input type="url" class="form-control" id="facebook" name="facebook">
+                        </div>
+                        <div class="form-group">
+                            <label for="github">GitHub</label>
+                            <input type="url" class="form-control" id="github" name="github">
+                        </div>
+                        <div class="form-check mb-3">
+                            <input type="checkbox" class="form-check-input" id="agree" required>
+                            <label class="form-check-label" for="agree">
+                                I agree with the <a href="/terms-of-privacy" target="_blank">terms of privacy</a>.
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Save Profile</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
-    
-
-    <script type="text/javascript" src="../static/js/dropzone.js"></script>
-    <script type="text/javascript" src="../static/js/scripts_profile.js"></script>
-   
-</body>
-</html>
+</div>
+<script type="text/javascript" src="../static/js/dropzone.js"></script>
+<script type="text/javascript" src="../static/js/scripts_profile.js"></script>
+{% endblock %}
