--- a/cvcrunchweb/webappcv/templates/index.html
+++ b/cvcrunchweb/webappcv/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block title %}Home{% endblock %}
 
+{% block body_class %}no-scroll{% endblock %}
+
 {% block content %}
     <!-- Step 1: Welcome Message -->
     <div id="step1" class="form-section bg-light">
