--- a/cvcrunchweb/webappcv/templates/base.html
+++ b/cvcrunchweb/webappcv/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dropzone.css') }}" />
     <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
     <header class="text-bg-dark fixed-top cv-crunch-header">
         <div class="container-fluid">
             <div class="d-flex flex-wrap justify-content-between align-items-center">
