--- a/cvcrunchweb/webappcv/templates/profile.html
+++ b/cvcrunchweb/webappcv/templates/profile.html
@@ -6,11 +6,11 @@
 <div class="profile-page container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-4">
-        <form action="/profile/picture" class="dropzone mb-4" id="profile-photo-upload">
-            <div class="dz-message needsclick">
-                <img id="profile-img" src="{{ profile_image }}" alt="Profile Image" class="img-thumbnail mx-auto d-block">
-            </div>
-        </form>
+            <form action="{{ url_for('main.handle_upload') }}" class="dropzone mb-4" id="profile-photo-upload">
+                <div class="dz-message needsclick">
+                    <img id="profile-img" src="{{ profile_image }}" alt="Profile Image" class="img-thumbnail mx-auto d-block">
+                </div>
+            </form>
         </div>
         <div class="col-md-8">
             <div class="card">
@@ -18,55 +18,55 @@
                     <h3 class="text-center">Profile</h3>
                 </div>
                 <div class="card-body">
-                    
-                    <form method="POST" action="/profile/update">
+                    <form method="POST" action="{{ url_for('main.profile') }}">
+                        {{ form.hidden_tag() }}
                         <div class="form-group">
-                            <label for="full_name">Full Name</label>
-                            <input type="text" class="form-control" id="full_name" name="full_name" required>
+                            {{ form.full_name.label }}
+                            {{ form.full_name(class="form-control") }}
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" name="email" required>
+                            {{ form.email(class="form-control", id="email") }}
+                        </div>  
+                        <div class="form-group">
+                            {{ form.phone.label }}
+                            {{ form.phone(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="phone">Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                            {{ form.street_address.label }}
+                            {{ form.street_address(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="street_address">Street Address</label>
-                            <input type="text" class="form-control" id="street_address" name="street_address" required>
+                            {{ form.zip_code.label }}
+                            {{ form.zip_code(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="zip_code">Zip Code</label>
-                            <input type="text" class="form-control" id="zip_code" name="zip_code" required>
+                            {{ form.city.label }}
+                            {{ form.city(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="city">City</label>
-                            <input type="text" class="form-control" id="city" name="city" required>
+                            {{ form.state.label }}
+                            {{ form.state(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="state">State</label>
-                            <input type="text" class="form-control" id="state" name="state" required>
+                            {{ form.country.label }}
+                            {{ form.country(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="country">Country</label>
-                            <input type="text" class="form-control" id="country" name="country" required>
+                            {{ form.linkedin.label }}
+                            {{ form.linkedin(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="linkedin">LinkedIn Profile</label>
-                            <input type="url" class="form-control" id="linkedin" name="linkedin">
+                            {{ form.instagram.label }}
+                            {{ form.instagram(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="instagram">Instagram</label>
-                            <input type="url" class="form-control" id="instagram" name="instagram">
+                            {{ form.facebook.label }}
+                            {{ form.facebook(class="form-control") }}
                         </div>
                         <div class="form-group">
-                            <label for="facebook">Facebook</label>
-                            <input type="url" class="form-control" id="facebook" name="facebook">
-                        </div>
-                        <div class="form-group">
-                            <label for="github">GitHub</label>
-                            <input type="url" class="form-control" id="github" name="github">
+                            {{ form.github.label }}
+                            {{ form.github(class="form-control") }}
                         </div>
                         <div class="form-check mb-3">
                             <input type="checkbox" class="form-check-input" id="agree" required>
