--- a/cvcrunchweb/webappcv/static/css/style.css
+++ b/cvcrunchweb/webappcv/static/css/style.css
@@ -3,120 +3,65 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    
 }
 
-body.no-scroll, html.no-scroll {
-    overflow: hidden; /* Disable scrolling for pages with the no-scroll class */
-    position: fixed;
-    width: 100%;
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
 
 body, html {
     height: 100%;
     margin: 0;
-    overflow-y: auto; /* Enable scrolling on the page globally */
+    padding: 0px;
 }
 
-.navbar {
-    height: 70px; /* Ensure the height is set */
-    position: fixed; /* Fix the navbar at the top */
+.content { 
+    flex: 1;
+}
+
+.conteudo {
+    padding-top: 150px; /* Height of the header */
+    padding-bottom: 140px; /* Height of the footer */
+    box-sizing: border-box; /* Ensure padding is included in the height */
+}
+
+header {
+    position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Ensure it is on top of other elements */
+    z-index: 1000; /* Ensure it stays above other content */
+}
+
+li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 
-.resume {
+footer {
+    padding: 20px;
+    background-color: #f0f0f0;
     width: 100%;
-    min-height: 100vh;
-    background: linear-gradient(#e7baff, #c2b6d9);
-    display: flex;
-    align-items: center;
+    margin-top: auto;
+    position: relative;    
+    text-align: center;
     justify-content: center;
 }
 
-.job {
-    width: 400px;
-    min-height: 400px;
-    border: #000000 2px solid;
+footer .social .text-body-secondary {
+    padding: 10px;
+}
+
+
+.form-control {
     display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
-#drop-area {
-    width: 500px;
-    height: 300px;
-    padding: 30px;
-    background: #f0f0f0;
-    text-align: center;
-    border-radius: 20px;
-}
-
-.image-view {
-    width: 18vh;
-    height: 18vh;
-    border-radius: 20px;
-    background: #ebd9f7;
-    padding: 5px;
-}
-
-.text-container,
-#my-dropzone {
-    width: 500px;
-    height: 300px;
-    margin-top: 25px;
-    padding: 30px;
-    background: #f0f0f0;
-    text-align: center;
-    border-radius: 20px;
-    border: 2px dashed #bbb5ff;
-}
-
-.dz-custom {
-    border: 2px dashed #dee2e6;
-    border-radius: .25rem;
-    background-color: #f8f9fa;
-}
-
-.dz-message {
-    text-align: center;
-    margin: 2rem 1rem;
-    height: 300px;
-}
-
-.fc-custom {
     height: 100%;
-    resize: none;
-}
-
-.text-container {
-    padding: 2px;
-    background-color: #f8f9fa;
-    border: 2px dashed #dee2e6;
-    border-radius: .25rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.text-container {
-    width: 500px;
-    align-self: center;
-}
-
-.txt-custom {
-    text-align: center;
-}
-
-@keyframes blink {
-    50% {
-        opacity: 0;
-    }
-}
-
-.blink {
-    animation: blink 0.3s step-start 0s 1;
+    border-radius: 20%;
 }
 
 .form-section {
@@ -141,8 +86,14 @@ body, html {
     transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-.cv-crunch-header {
-    background-color: #123456;
+body header .cv-crunch-header  {
+    background-color: #f0f0f0;  
+    color: #333;  
+    box-shadow: 0px 8px 10px 0 rgba(0, 0, 0, 0.5);
+}
+.cv-crunch-header .nav-link {
+    color: #333 !important;
+    text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.6);
 }
 
 .nav-buttons button {
@@ -168,10 +119,23 @@ h4 {
 }
 
 .profile-page {
-    padding-top: 70px; /* Create space for the navbar */
     height: calc(100vh - 70px); /* Ensure it takes the full viewport height minus the navbar height */
     overflow-y: auto; /* Enable vertical scrolling */
     box-sizing: border-box; /* Include padding in the element's total width and height */
+}
+
+#profile-page-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+#profile-page-scroll {
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.profile-page .profile-img-photo {
+    justify-content: center;
+    align-items: center;
 }
 
 .profile-page .dropzone {
@@ -198,12 +162,7 @@ h4 {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-bottom: 15px;
-}
-
-.profile-page .card {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    margin-top: 30px;
 }
 
 .profile-page .card-header {
@@ -243,3 +202,207 @@ h4 {
 .profile-page .dz-default.dz-message span {
     display: none;
 }
+
+.profile-img-photo .dz-message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile-img-photo .dz-label {
+    font-size: 10px; 
+    color: #1c1cf3; 
+    text-align: center;
+    display: block; 
+}
+
+.profile-card {
+    height: calc(100vh - 140px); 
+    overflow-y: auto; 
+    box-sizing: border-box; 
+}
+
+.dropzone {
+    width: 100%; 
+    height: 100%;
+    text-align: center;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between !important;
+    max-width: 400px;
+    min-height: 450px !important;
+    border: 10px solid #F39C12 !important;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5) ;
+}
+
+.resume-buttons,
+.option-buttons,
+.dropzone-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around; /* Ensures buttons are spaced around */
+    margin-top: 10px;
+    align-items: center;
+}
+
+.resume-buttons .btn,
+.option-buttons .btn,
+.dropzone-buttons .btn {
+    flex: 1; /* Allows buttons to grow equally */
+    margin: 0 5px; /* Adds some spacing between buttons */
+    text-align: center;
+}
+
+.text-container {
+    width: 100%; 
+    height: 100%;
+    max-width: 400px;
+    text-align: center;
+    border-radius: 20px;
+    border:0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #F39C12;
+    border: 10px solid #F39C12;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+
+}
+
+textarea.form-control.fc-custom {
+    width: 100%; 
+    height: 100%;
+    max-width: 400px;
+    text-align: center;
+    border-radius: 20px;
+    border:0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ffffff;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+
+}
+
+.text-container {
+    padding: 20px;
+}
+
+.dz-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.txt-custom {
+    text-align: center;
+}
+
+.container-fluid .custom-card {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+    border-radius: 20px;
+    border: 10px solid #191080;
+    max-width: 400px;
+    padding: 20px;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.resume-upload, .upload-job-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dz-custom {
+    flex-grow: 1; 
+    justify-content: center;
+    align-items: center;;
+}
+
+h3 {
+    color: #333; 
+}
+
+.btn-primary {
+    background-color: #0C63ED;
+    border: none;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    border: none;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+}
+
+.container-fluid .square {
+    width: 120px; /* Size of the squares */
+    height: 120px;
+    background-color: #3498DB; /* Color of the squares */
+    margin: 2px !important;
+}
+
+.squares-container {
+    margin-bottom: 10px; 
+    margin-top: 10px; 
+}
+
+.container-fluid .square1 {
+    background-image: url('../images/score.png');
+    border-radius: 10% 0% 0% 0%; /* Your custom border-radius */
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5); /* Your existing shadow */
+    background-size: cover; /* Ensure the image covers the element */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* No repeating */
+    -webkit-background-clip: border-box; /* Clip the background to the border box */
+    background-clip: border-box;
+    overflow: hidden; /* Hide anything outside the border-radius */
+}
+
+.container-fluid .square2 {
+    border-radius: 0% 10% 0% 0%;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    background-image: url('../images/gen_cv.jpg');
+    background-size: cover; /* Ensure the image covers the element */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* No repeating */
+    -webkit-background-clip: border-box; /* Clip the background to the border box */
+    background-clip: border-box;
+    overflow: hidden; /* Hide anything outside the border-radius */
+}
+
+.container-fluid .square3 {
+    border-radius: 0% 0% 0% 10%;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    background-image: url('../images/gen_cover_letter.jpg');
+    background-size: cover; /* Ensure the image covers the element */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* No repeating */
+    -webkit-background-clip: border-box; /* Clip the background to the border box */
+    background-clip: border-box;
+    overflow: hidden; /* Hide anything outside the border-radius */
+}
+
+.container-fluid .square4 {
+    border-radius: 0% 0% 10% 0%;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5);
+    background-image: url('../images/gen_report.png');
+    background-size: cover; /* Ensure the image covers the element */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* No repeating */
+    -webkit-background-clip: border-box; /* Clip the background to the border box */
+    background-clip: border-box;
+    overflow: hidden; /* Hide anything outside the border-radius */
+}
+
