--- a/cvcrunchweb/webappcv/templates/profile.html
+++ b/cvcrunchweb/webappcv/templates/profile.html
@@ -3,70 +3,79 @@
 {% block title %}Profile{% endblock %}
 
 {% block content %}
-<div class="profile-page container mt-5">
+<body id="profile-page-scroll">
+    
+<div class="profile-page container mt-5" >
     <div class="row justify-content-center">
-        <div class="col-md-4">
-            <form action="{{ url_for('main.handle_upload') }}" class="dropzone mb-4" id="profile-photo-upload">
-                <div class="dz-message needsclick">
-                    <img id="profile-img" src="{{ profile_image }}" alt="Profile Image" class="img-thumbnail mx-auto d-block">
-                </div>
-            </form>
-        </div>
-        <div class="col-md-8">
-            <div class="card">
+        <div class="col-md-12">
+            <div class="card profile-card">
                 <div class="card-header">
+                    <div class="profile-img-photo d-flex flex-column align-items-center">
+                        <form action="{{ url_for('main.handle_upload') }}" class="dropzone mb-4" id="profile-photo-upload">
+                            <div class="dz-message needsclick">
+                                <img id="profile-img" src="{{ profile_image }}" alt="Profile Image" class="img-thumbnail mx-auto d-block">
+                                <label for="profile-photo-upload" class="dz-label">Clique na Imagem para Substituir</label>
+                            </div>
+                        </form>
+                    </div>
                     <h3 class="text-center">Profile</h3>
                 </div>
                 <div class="card-body">
                     <form method="POST" action="{{ url_for('main.profile') }}">
                         {{ form.hidden_tag() }}
-                        <div class="form-group">
-                            {{ form.full_name.label }}
-                            {{ form.full_name(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            {{ form.email(class="form-control", id="email") }}
-                        </div>  
-                        <div class="form-group">
-                            {{ form.phone.label }}
-                            {{ form.phone(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.street_address.label }}
-                            {{ form.street_address(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.zip_code.label }}
-                            {{ form.zip_code(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.city.label }}
-                            {{ form.city(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.state.label }}
-                            {{ form.state(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.country.label }}
-                            {{ form.country(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.linkedin.label }}
-                            {{ form.linkedin(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.instagram.label }}
-                            {{ form.instagram(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.facebook.label }}
-                            {{ form.facebook(class="form-control") }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.github.label }}
-                            {{ form.github(class="form-control") }}
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    {{ form.full_name.label }}
+                                    {{ form.full_name(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    {{ form.email(class="form-control", id="email") }}
+                                </div>  
+                                <div class="form-group">
+                                    {{ form.phone.label }}
+                                    {{ form.phone(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.street_address.label }}
+                                    {{ form.street_address(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.zip_code.label }}
+                                    {{ form.zip_code(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.city.label }}
+                                    {{ form.city(class="form-control") }}
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    {{ form.state.label }}
+                                    {{ form.state(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.country.label }}
+                                    {{ form.country(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.linkedin.label }}
+                                    {{ form.linkedin(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.instagram.label }}
+                                    {{ form.instagram(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.facebook.label }}
+                                    {{ form.facebook(class="form-control") }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.github.label }}
+                                    {{ form.github(class="form-control") }}
+                                </div>
+                            </div>
                         </div>
                         <div class="form-check mb-3">
                             <input type="checkbox" class="form-check-input" id="agree" required>
@@ -83,4 +92,6 @@
 </div>
 <script type="text/javascript" src="../static/js/dropzone.js"></script>
 <script type="text/javascript" src="../static/js/scripts_profile.js"></script>
+</body>
+
 {% endblock %}
