--- a/cvcrunchweb/webappcv/templates/base.html
+++ b/cvcrunchweb/webappcv/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Step-by-Step Form{% endblock %}</title>
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/profile.css') }}" rel="stylesheet">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dropzone.css') }}" />
@@ -13,9 +14,9 @@
 <body class="{% block body_class %}{% endblock %}">
     <header class="fixed-top ">
         <div class="container-fluid cv-crunch-header">
-            <div class="d-flex flex-wrap justify-content-between align-items-center border-bottom">
+            <div class="d-flex flex-wrap justify-content-between align-items-center">
                 <li>
-                    <a href="#" class="nav-link d-flex"><img src="{{ url_for('static', filename='images/cv_crunch_trsp.png') }}" style="height: 60px;"></a>
+                    <a href="#" class="nav-link d-flex"><img src="{{ url_for('static', filename='images/cvcrunch2.png') }}" style="height: 60px;"></a>
                 </li>
 
                 <ul class="nav align-items-center">
@@ -80,20 +81,20 @@
     </svg>
 
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
-          <div class="row">
-            <div class="col-sm-6 col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 aina</span>
+        <footer class="d-flex flex-wrap justify-content-around fixed-bottom">
+            <div class="d-flex ">
+                <span class="mb-3 mb-md-0 text-body-secondary"> &copy; 2024 Aina TI</span>
             </div>
-      
-            <ul class="nav col-sm-6 col-md-4 justify-content-end list-unstyled d-flex social">
-                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+    
+            <ul class="nav social">
+                <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24" ><use xlink:href="#twitter"/></svg></a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
                 <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
             </ul>
-            </div>
         </footer>
     </div>
+    
+    
 
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='bootstrap.js') }}"></script>
